--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Validador de CPF</title>
+    <title>Validador de CEP</title>
     
 </head>
 <body>
@@ -18,57 +18,40 @@
     <div class="main-container">
 
         <form>
-            <h1>Cadastro</h1>
+            <h1>Validador de CEP</h1>
 
             <div class="row">
-                <div class="first-row">
-                    <label for="nome">Nome</label>
-                    <input type="text" class="upper-box" id="nome">
+                <div class="my-row">
+                    <label for="cep">Insira o CEP</label>
+                    <input type="number" id="cep" placeholder="000000-000" required>
                 </div>
-                <div class="first-row">
-                    <label for="email">Email</label>
-                    <input type="email" class="upper-box" id="email">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="second-row">
-                    <label for="cep">CEP</label>
-                    <input type="number" id="cep" placeholder="000000-000">
-                </div>
-                <div class="second-row">
+                <div class="my-row">
                     <label for="adress">Endereço</label>
-                    <input type="text" id="adress">
+                    <input type="text" id="adress" readonly>
                 </div>
-                <div class="second-row">
-                    <label for="numero">Número</label>
-                    <input type="number" id="numero">
+                <div class="my-row">
+                    <label for="bairro">Bairro</label>
+                    <input type="text" id="bairro" readonly>
+                </div>
+                <div class="my-row">
+                    <label for="cidade">Cidade</label>
+                    <input type="text" id="cidade" readonly>
+                </div>
+                <div class="my-row">
+                    <label for="estado">Estado</label>
+                    <input type="text" id="estado" readonly>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="third-row">
-                    <label for="bairro">Bairro</label>
-                    <input type="text" id="bairro">
-                </div>
-                <div class="third-row">
-                    <label for="cidade">Cidade</label>
-                    <input type="text" id="cidade">
-                </div>
-                <div class="third-row">
-                    <label for="numero">Estado</label>
-                    <input type="text" id="numero">
-                </div>
-            </div>
 
             <button id="btn-clear">Limpar</button>
 
-            <button id="btn-save">Cadastrar</button>
+            <button id="btn-save">Pesquisar</button>
         </form>
 
     </div>
 
 
-    <script src="logica.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
