--- a/index.html
+++ b/index.html
@@ -1,56 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
-
-    <title>Validador de CEP</title>
-    
+    <title>Document</title>
 </head>
 <body>
-    
-    <div class="main-container">
+    <h2>digite o cep sem -</h2>
+    <input type="number" placeholder="cep" id="cep">
+    <input type="button" value="enviar" id="send" onclick="pegaCep()"> 
+    <input type="button" value="limpar" id="clear" onclick="clearAll()"><br>
 
-        <form>
-            <h1>Validador de CEP</h1>
-
-            <div class="row">
-                <div class="my-row">
-                    <label for="cep">Insira o CEP</label>
-                    <input type="number" id="cep" placeholder="000000-000" required>
-                </div>
-                <div class="my-row">
-                    <label for="adress">Endereço</label>
-                    <input type="text" id="adress" readonly>
-                </div>
-                <div class="my-row">
-                    <label for="bairro">Bairro</label>
-                    <input type="text" id="bairro" readonly>
-                </div>
-                <div class="my-row">
-                    <label for="cidade">Cidade</label>
-                    <input type="text" id="cidade" readonly>
-                </div>
-                <div class="my-row">
-                    <label for="estado">Estado</label>
-                    <input type="text" id="estado" readonly>
-                </div>
-            </div>
-
-
-            <button id="btn-clear">Limpar</button>
-
-            <button id="btn-save">Pesquisar</button>
-        </form>
-
-    </div>
-
+    <input type="text" placeholder="endereço" id="endereco" readonly> <br>
+    <input type="text" placeholder="bairro" id="bairro" readonly> <br>
+    <input type="text" placeholder="cidade" id="cidade" readonly> <br>
+    <input type="text" placeholder="estado" id="estado" readonly> <br>
+    <input type="text" placeholder="DDD" id="ddd" readonly> <br>
 
     <script src="script.js"></script>
 </body>
